--- a/style.css
+++ b/style.css
@@ -1,8 +1,18 @@
-.addBirthday {
+body {
+    margin-bottom: 200px;
+}
+
+#addBirthday {
+    color: white;
     position: fixed;
-    padding: 15px;
+    padding: 5px 15px 15px 15px;
     width: 100%;
     bottom: -100px;
     left: 0;
     background-color: blue;
+    transition: 0.2s ease-in;
+}
+
+.test {
+    bottom: 0 !important;
 }
