--- a/style.css
+++ b/style.css
@@ -19,9 +19,17 @@
     src: url('font/Inter-Light.woff') format('woff'), url('font/Inter-Light.woff') format('ttf');
     }
 
+html {
+    background-color: rgb(251, 251, 251);
+}
+
 body {
+    background-color: white;
     font-family: Inter Light;
     margin-bottom: 20%;
+    max-width: 440px;
+    margin: auto;
+    padding: 5px;
 }
 
 h1 {
@@ -38,23 +46,66 @@ input {
     padding: 12px;
 }
 
+button {
+    width: 100%;
+    border-radius: 24px;
+    font-size: 16px;
+    background-color: #42BDE3;
+    padding: 12px;
+    color: white;
+    border: none;
+
+}
+
 input:focus {
-    outline: solid 2px rgb(4, 0, 255);
+    outline: solid 2px #42BDE3;
 
 }
 
 #addBirthday {
-    width: 96vw;
+    width: 100%;
+    max-width: 440px;
     height: 70%;
-    color: white;
+    color: black;
     position: fixed;
-    padding: 15px;
-    bottom: -65%;
-    left: 0;
-    z-index: 5;
-    background-color: #42BDE3;
+    bottom: -100%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 5;  
     transition: 0.2s ease-in;
-    border-radius: 15px;
+    background-color: white;
+    border-radius: 15px 15px 0 0;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.handle {
+    height: 5px;
+    width: 50px;
+    background-color: rgb(231, 231, 231);    margin-right: auto;
+    border-radius: 3px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    display: flex;
+    align-self: center;
+}
+
+.lightbox {
+    display: none;
+    background-color: rgb(3, 3, 3);
+    opacity: 0.8;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    width: 100%;
+    height: 100%;
+}
+
+.LBDisp {
+    display: block;
 }
 
 .test {
@@ -68,17 +119,17 @@ input:focus {
 #profile {
     position: fixed;
     top: 0;
-    left: 100%;
+    left: 50%;
+    transform: translateX(-50%);
     z-index: 3;
     background-color: white;
     height: 100vh;
     width: 100%;
+    max-width: 440px;
     transition: 0.2s ease-in;
 }
 
-.truc {
-    left: 0 !important;
-}
+
 
 .friendsList {
     display: flex;
@@ -97,10 +148,11 @@ input:focus {
 }
 
 .friendsList img {
-    width: 18vw;
-    height: 18vw;
+    width: 65px;
+    height: 65px;
     object-fit: cover;
     border-radius: 12px;
+    background-color: #42BDE3;
     
 }
 
@@ -135,8 +187,8 @@ input:focus {
 
 
 .upperProfile img {
-    width: 40vw;
-    height: 40vw;
+    width: 180px;
+    height: 180px;
     border-radius: 50%;
     border: white 4px solid;
     object-fit: cover;
@@ -193,4 +245,29 @@ input:focus {
     margin-top: 52px;
 }
 
+#loader {
+    position: absolute;
+    z-index: 5000;
+    width: 100%;
+    height: 80vh;
+    background-color: rgb(255, 255, 255);
+    transition: 2s;
+}
 
+.loading {
+    position: absolute;
+    top: 20%;
+    left: 30%;
+    width: 100px;
+    height: 100px;
+     border: solid 0px transparent;   
+    border-top: 2px solid #42b5e3;
+    border-radius: 50%;
+    z-index: 500;
+    animation: spin 0.8s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
