--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ html {
     background-color: #42BDE3;
     color: white;
     width: 100%;
-    height: 72px;
+    height: 52px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -110,7 +110,7 @@ input:focus {
 #addBirthday input {
     width: 110%;
     margin-left: -10%;
-    margin-bottom: 0;
+    margin-bottom: 15px;
 }
 
 .handle {
@@ -217,8 +217,6 @@ input:focus {
     margin-right: auto;
 }
 
-
-
 .upperProfile img {
     width: 180px;
     height: 180px;
@@ -253,7 +251,6 @@ input:focus {
     background-color: transparent;
     border: none;
     font-size: 16px;
-    margin: 15px;
 }
 
 .present {
