--- a/style.css
+++ b/style.css
@@ -153,6 +153,7 @@ input:focus {
     width: 100%;
     max-width: 440px;
     transition: 0.2s ease-in;
+    overflow-y: scroll;
 }
 
 .friendsInfo {
@@ -235,6 +236,7 @@ input:focus {
 #profile ul {
     padding: 0;
     margin-top: 32px;
+    margin-bottom: 62px;
     width: 100%;
 }
 
