--- a/style.css
+++ b/style.css
@@ -354,6 +354,15 @@ input[type=file] {
     display: none;
 }
 
+#profile::-webkit-scrollbar {
+    width:10px;
+  }
+
+   
+#profile::-webkit-scrollbar-thumb {
+    background-color: #42BDE3;
+    border-radius: 5px;
+  }
 
 
 @keyframes spin {
